--- a/Cargo.toml
+++ b/Cargo.toml
@@ -94,6 +94,8 @@ bytes = "1"
 tokio-rustls = "0.26"
 rustls = { version = "0.23", features = ["aws-lc-rs"] }
 rcgen = "0.14"
+hex = "0.4"
+sha2 = "0.10"
 
 [profile.release]
 codegen-units = 1
