--- a/crates/wassette/Cargo.toml
+++ b/crates/wassette/Cargo.toml
@@ -9,6 +9,7 @@ anyhow = { workspace = true }
 component2json = { path = "../component2json" }
 etcetera = { workspace = true }
 futures = { workspace = true }
+hex = "0.4"
 http = "1.0"
 num_cpus = "1.0"
 hyper = { version = "1.7", features = ["client"] }
